<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/doa_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kumpulansuratdandoadoa.kumpulansuratpendekdandoa.MainActivity">
    <!--tools:showIn="@layout/doa_main">-->

    <!-- Doa 1 -->
    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_heading"
        android:padding="@dimen/padding_regular"
        android:text="@string/intro_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:id="@+id/pilih_doa"
        android:layout_below="@id/textintro"
        android:text="@string/pilih_doa"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:id="@+id/imgdoa_1"
        android:layout_below="@id/pilih_doa"
        android:contentDescription="@string/doa_1"
        android:src="@drawable/g1"
        android:layout_alignRight="@+id/pilih_doa"
        android:layout_alignEnd="@+id/pilih_doa"
        android:layout_alignBottom="@+id/textView"
        android:onClick="showDoa_1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/pilih_doa"
        android:layout_toRightOf="@id/imgdoa_1"
        android:text="@string/doa_1"
        android:id="@+id/textView"
        android:onClick="showDoa_1" />

    <!-- Doa 2 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:id="@+id/imgdoa_2"
        android:layout_below="@id/imgdoa_1"
        android:contentDescription="@string/doa_2"
        android:src="@drawable/g2"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView"
        android:layout_alignBottom="@+id/textView2"
        android:onClick="showDoa_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/imgdoa_1"
        android:layout_toRightOf="@id/imgdoa_2"
        android:text="@string/doa_2"
        android:id="@+id/textView2"
        android:onClick="showDoa_1" />

    <!-- Doa 3 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:id="@+id/doa_3"
        android:layout_below="@id/imgdoa_2"
        android:contentDescription="@string/doa_3"
        android:src="@drawable/g3"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        android:layout_alignBottom="@+id/textView3"
        android:onClick="showDoa_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/imgdoa_2"
        android:layout_toRightOf="@id/doa_3"
        android:text="@string/doa_3"
        android:id="@+id/textView3"
        android:onClick="showDoa_1" />

</RelativeLayout>